apps/base/pigeon-relay/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pigeon-relay
  labels:
    app: pigeon-relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pigeon-relay
  template:
    metadata:
      labels:
        app: pigeon-relay
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: pigeon-relay
          image: ghcr.io/isaiah-harville/pigeon/relay:v0.2.0 # {"$imagepolicy": "flux-system:pigeon-relay"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
